added hero section

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,5 +1,5 @@
 {
-  "name": "sassydemo",
+  "name": "portfolio-sassydemo",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [],
@@ -73,7 +73,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7882,
+    "port": 7883,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
